fix align

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,6 +5,9 @@
 }
 
 .App {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   text-align: center;
   min-height: 100vh;
   background-color: rgb(249, 249, 249);
@@ -66,6 +69,7 @@ header {
   background: #f4f4f4;
   padding: 2em;
   height: 10vh;
+  width: 100%;
 }
 
 header img {
@@ -108,6 +112,7 @@ footer {
   display: flex;
   align-items: center;
   justify-content: center;
+  width: 100%;
   height: 5vh;
   color: #fff;
   background: #f76c6c;
